--- a/src/app/api-call/api-call.html
+++ b/src/app/api-call/api-call.html
@@ -1,1 +1,17 @@
-<p>api-call works!</p>
+<div>
+    <div *ngFor="let user of users" class="user-card">
+        Full name: {{user.name}}
+        <br />
+        Email: {{user.email}}
+        <br />
+        Phone: {{user.phone}}
+        <br />
+        Address: {{user.address.street}}, {{user.address.city}}, {{user.address.zipcode}}
+        <br />
+        Company: {{user.company.name}}
+        <br />
+        Website: <a href="http://{{user.website}}" target="_blank">{{user.website}}</a>
+        <br />
+    
+    </div>
+</div>
